--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Artem",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.1",
-    "morgan": "^1.10.0"
+    "body-parser": "^1.18.3",
+    "express": "^4.16.3",
+    "morgan": "^1.9.0"
   }
 }
